--- a/Module2-Solutions/index.html
+++ b/Module2-Solutions/index.html
@@ -14,14 +14,14 @@
       	<h1>Our Menu</h1>
       	<div class="coloumn-l-04 coloumn-m-06 coloumn-s-12" id="this-container">
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam dolorum earum ad ducimus vero libero commodi molestias, dolore quam in sapiente assumenda sit nostrum error non aliquam aut voluptas quaerat?
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam dolorum earum ad ducimus vero libero commodi molestias, dolore quam in sapiente assumenda sit nostrum?
         </p>
         <p id="this-para-1">Chicken</p>
     </div>
 
     <div class="coloumn-l-04 coloumn-m-06 coloumn-s-12" id="this-container">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, non facere eos minus labore ipsam assumenda commodi consectetur, dolore velit totam voluptates corporis pariatur quo obcaecati est soluta exercitationem deserunt.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, non facere eos minus labore ipsam assumenda commodi consectetur, dolore velit totam voluptates deserunt.
         </p>
 
         <p id="this-para-2">Beef</p>
@@ -29,7 +29,7 @@
 
     <div class="coloumn-l-04 coloumn-m-12 coloumn-s-12" id="this-container">
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo fugit, veniam vel veritatis minus explicabo, repellat molestias officiis tempore ea rem error atque! Ipsam cum nesciunt necessitatibus magnam dolores.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo fugit, veniam vel veritatis minus explicabo, repellat molestias officiis tempore ea rem error atque!
         </p>
 
         <p id="this-para-3">Sushi</p>
